--- a/assets/scss/pages/_cart.scss
+++ b/assets/scss/pages/_cart.scss
@@ -51,6 +51,7 @@
 .pro-item-bg:hover {
   background: $warning-50;
 }
+
 .cart-list {
   flex: 1;
   margin-left: 84px;
@@ -154,4 +155,10 @@
   background: $primary-2;
   border: 1px solid $primary-2;
   border-radius: 16px;
+}
+.date-text {
+  font-size: 16px;
+  @include media-breakpoint-down(sm) {
+    font-size: 3.733vw;
+  }
 }
