--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -4,6 +4,7 @@
     linear-gradient(360deg, rgba(0, 47, 218, 0.1) 22.53%, rgba(14, 75, 196, 0.2) 100%),
     linear-gradient(360deg, rgba(0, 0, 0, 0) 14.6%, rgba(0, 0, 0, 0.2) 42.59%, rgba(0, 0, 0, 0.172017) 61.79%, rgba(0, 0, 0, 0.0423077) 93.31%),
     url("/assets/images/banner.png");
+    
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -11,9 +12,11 @@
   overflow-y: hidden;
   width: 100%;
 
+
   @include media-breakpoint-down(sm) {
     height: 670px;
   }
+
 
   @include media-breakpoint-up(sm) {
     height: 800px;
@@ -23,13 +26,19 @@
   z-index: -1;
   animation: fadeIn 2s ease-in-out;
 
+
   @keyframes fadeIn {
     from {
       opacity: 0;
       transform: scale(1.3);
+      opacity: 0;
+      transform: scale(1.3);
     }
 
+
     to {
+      opacity: 1;
+      transform: scale(1);
       opacity: 1;
       transform: scale(1);
     }
